--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 title: Home
 ---
 
-<div class="hero">
-  <img src="{{ site.baseurl }}{{ site.hero.image }}" />
-  <p>{{ site.hero.caption }}</p>
-</div>
+{% include career-profile.html %}
+
+{% include experience.html %}
+
+{% include projects.html %}
+
+{% include additional.html %}
