--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 layout: default
 title: Home
 ---
-
+<!-- 소개 -->
 {% include career-profile.html %}
 
+<!-- 경력 -->
 {% include experience.html %}
 
+<!-- 프로젝트 -->
 {% include projects.html %}
 
+<!-- 추가경력 -->
 {% include additional.html %}
